Fix css to display google map on mobile browser without break the page

--- a/themes/theme/static/css/theme.css
+++ b/themes/theme/static/css/theme.css
@@ -237,3 +237,8 @@ header.carousel .fill {
 .navbar-brand {
   padding: 15px 0px 0px 17px;
 }
+
+iframe {
+	border: 0;
+	max-width: 100%;
+}
